; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/atl/extr_registrar.c_resource_register.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/atl/extr_registrar.c_resource_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOAD_LIBRARY_AS_DATAFILE = common dso_local global i32 0, align 4
@CP_ACP = common dso_local global i32 0, align 4
@HEAP_ZERO_MEMORY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"could not load resource\0A\00", align 1
@.str.1 = private unnamed_addr constant [23 x i8] c"Could not find source\0A\00", align 1
@.str.2 = private unnamed_addr constant [30 x i8] c"Could not load resource file\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32, i32, i32)* @resource_register to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @resource_register(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* @LOAD_LIBRARY_AS_DATAFILE, align 4
  %20 = call i64 @LoadLibraryExW(i32 %18, i32* null, i32 %19)
  store i64 %20, i64* %11, align 8
  %21 = load i64, i64* %11, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %82

23:                                               ; preds = %5
  %24 = load i64, i64* %11, align 8
  %25 = load i32, i32* %8, align 4
  %26 = load i32, i32* %9, align 4
  %27 = call i32 @FindResourceW(i64 %24, i32 %25, i32 %26)
  store i32 %27, i32* %12, align 4
  %28 = load i32, i32* %12, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %75

30:                                               ; preds = %23
  %31 = load i64, i64* %11, align 8
  %32 = load i32, i32* %12, align 4
  %33 = call i32 @LoadResource(i64 %31, i32 %32)
  store i32 %33, i32* %13, align 4
  %34 = load i64, i64* %11, align 8
  %35 = load i32, i32* %12, align 4
  %36 = call i32 @SizeofResource(i64 %34, i32 %35)
  store i32 %36, i32* %16, align 4
  %37 = load i32, i32* %13, align 4
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %70

39:                                               ; preds = %30
  %40 = load i32, i32* @CP_ACP, align 4
  %41 = load i32, i32* %13, align 4
  %42 = load i32, i32* %16, align 4
  %43 = call i32 @MultiByteToWideChar(i32 %40, i32 0, i32 %41, i32 %42, i8* null, i32 0)
  %44 = add nsw i32 %43, 1
  store i32 %44, i32* %15, align 4
  %45 = call i32 (...) @GetProcessHeap()
  %46 = load i32, i32* @HEAP_ZERO_MEMORY, align 4
  %47 = load i32, i32* %15, align 4
  %48 = sext i32 %47 to i64
  %49 = mul i64 %48, 4
  %50 = trunc i64 %49 to i32
  %51 = call i8* @HeapAlloc(i32 %45, i32 %46, i32 %50)
  store i8* %51, i8** %14, align 8
  %52 = load i32, i32* @CP_ACP, align 4
  %53 = load i32, i32* %13, align 4
  %54 = load i32, i32* %16, align 4
  %55 = load i8*, i8** %14, align 8
  %56 = load i32, i32* %15, align 4
  %57 = call i32 @MultiByteToWideChar(i32 %52, i32 0, i32 %53, i32 %54, i8* %55, i32 %56)
  %58 = load i8*, i8** %14, align 8
  %59 = load i32, i32* %15, align 4
  %60 = sub nsw i32 %59, 1
  %61 = sext i32 %60 to i64
  %62 = getelementptr inbounds i8, i8* %58, i64 %61
  store i8 0, i8* %62, align 1
  %63 = load i32*, i32** %6, align 8
  %64 = load i8*, i8** %14, align 8
  %65 = load i32, i32* %10, align 4
  %66 = call i32 @string_register(i32* %63, i8* %64, i32 %65)
  store i32 %66, i32* %17, align 4
  %67 = call i32 (...) @GetProcessHeap()
  %68 = load i8*, i8** %14, align 8
  %69 = call i32 @HeapFree(i32 %67, i32 0, i8* %68)
  br label %74

70:                                               ; preds = %30
  %71 = call i32 @WARN(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  %72 = call i32 (...) @GetLastError()
  %73 = call i32 @HRESULT_FROM_WIN32(i32 %72)
  store i32 %73, i32* %17, align 4
  br label %74

74:                                               ; preds = %70, %39
  br label %79

75:                                               ; preds = %23
  %76 = call i32 @WARN(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  %77 = call i32 (...) @GetLastError()
  %78 = call i32 @HRESULT_FROM_WIN32(i32 %77)
  store i32 %78, i32* %17, align 4
  br label %79

79:                                               ; preds = %75, %74
  %80 = load i64, i64* %11, align 8
  %81 = call i32 @FreeLibrary(i64 %80)
  br label %86

82:                                               ; preds = %5
  %83 = call i32 @WARN(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.2, i64 0, i64 0))
  %84 = call i32 (...) @GetLastError()
  %85 = call i32 @HRESULT_FROM_WIN32(i32 %84)
  store i32 %85, i32* %17, align 4
  br label %86

86:                                               ; preds = %82, %79
  %87 = load i32, i32* %17, align 4
  ret i32 %87
}

declare dso_local i64 @LoadLibraryExW(i32, i32*, i32) #1

declare dso_local i32 @FindResourceW(i64, i32, i32) #1

declare dso_local i32 @LoadResource(i64, i32) #1

declare dso_local i32 @SizeofResource(i64, i32) #1

declare dso_local i32 @MultiByteToWideChar(i32, i32, i32, i32, i8*, i32) #1

declare dso_local i8* @HeapAlloc(i32, i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i32 @string_register(i32*, i8*, i32) #1

declare dso_local i32 @HeapFree(i32, i32, i8*) #1

declare dso_local i32 @WARN(i8*) #1

declare dso_local i32 @HRESULT_FROM_WIN32(i32) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i32 @FreeLibrary(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
